--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
   <p>Utilities</p>
   <ul>
-    <li><a target="_blank" href="web-projects/index2.php">PHP Info</a></li>
-    <li><a target="_blank" href="phpmyadmin">phpmyadmin</a></li>
+    <li><a target="_blank" href="index2.php">PHP Info</a></li>
+    <li><a target="_blank" href="../../phpmyadmin">phpmyadmin</a></li>
   </ul>
 
 </body>
