Update the tweet button to a .btn-primary

--- a/random-quote-gen/index.html
+++ b/random-quote-gen/index.html
@@ -5,6 +5,7 @@
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://lipis.github.io/bootstrap-social/bootstrap-social.css">
 	<link rel="stylesheet" href="styles/style.css">
 
 </head>
@@ -17,9 +18,7 @@
 	  </div>
 		<div class="row buttons">
 		<div class="col-md-6 text-left">
-			<a class="btn">
-			    <i class="fa fa-twitter fa-lg" id="tweet-quote"aria-hidden="true"> Tweet </i>
-			</a>
+			<button class="btn btn-primary" id="tweet-quote"> Tweet </button>
 		</div>
 		<div class="col-md-6 text-right">
 			<button class="btn btn-default" id="newQuoteBtn">New Quote</button>
