Wiki-search Changes - Update background color. - Reposition search box to center. - Added background img. - Added footer. - Added functions   - Auto select input when search bar was clicked.   - Auto empty result box when topic was deleted.   - Required topic input to query.

--- a/wiki-search/index.html
+++ b/wiki-search/index.html
@@ -1,35 +1,46 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Wiki Search</title>
-
+	<meta charset="utf-8">
+  	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
 
-<div class=container> 
+<div class="container"> 
 
-		<div class=search-box>
-		<div class=row>
+		<div class="search-box">
+		<div class="row">
+			
 			  <div class="col-md-7 col-md-offset-2">
 			    <div class="input-group">
-			      <input type="text" class="form-control" placeholder="Search for wiki post" id="search-value">
-			      <span class="input-group-btn">
+			      <input type="text" class="form-control" placeholder="Search for wiki post" id="search-value" onclick="selectInput()">
+			      <div class="input-group-btn">
 			        <button class="btn btn-secondary" type="button" id="search-btn"> Go! </button>
-			      </span>
+			      </div>
 			    </div>
-			    	<a class=text-center href=https://en.wikipedia.org/wiki/Special:Random target=_blank><p>Click me for random wiki post.</p></a>
+			    		<a class="text-center" href="https://en.wikipedia.org/wiki/Special:Random" target="_blank"><p>Click me for random wiki post.</p></a>
 			  </div>
+		
 		</div> <!-- end .row -->		
 		</div>	<!-- end .search-box -->
-
-		<div class=result-box id=result-box>
+		
+		<div class="result" id="result">
+			
+		</div>
+		<div class="list-group result-box" id="result-box">
 
 		</div> <!-- end .result-box -->
 
 		
 	</div> <!-- end container -->
+
+<footer class="container-fluid text-center">
+	<p>by <a href="https://codepen.io/ecduran/" target="_blank">Eldrin Duran</a></p>
+</footer>	
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="scripts/script.js"></script>
